# koboldcpp-sandbox

./: .gitignore  API_EXAMPLES.md  ARCHITECTURE_SUMMARY.md  ARTIFACT_SCHEMA.md  ATOMIC_QA_COVERAGE_PLAN.md  CLAUDE.md  CONTEXT_SUMMARY.md  ENGINE_MVP_PLAN.md  MANUAL_COMPLEXITY_AUDIT.md  MCP_AGENTS.md  PINE_AST_DRAFT.md  PYNECORE_INTEGRATION_PLAN.md  README.md  REFERENCE_TODO.md  SEMANTIC_PROBABILITY_BRIDGE.md  SEMANTIC_TREE_ROUTING_SUMMARY.md  SERIES_RUNTIME_SUMMARY.md  SOURCE_REF_SCHEMA.md  TASKS.md  TICK_RUNTIME_ARCHITECTURE.md  UV_NOTES.md  WORKER_OUTPUT_FORMAT.md  bench_parallel.py  color_embed.py  color_query.py  constraint_engine_architecture_expanded.md  cube.html  embed_service.py  nothink.bat  patch0.patch  pchat_log.jsonl  pose_embed.py  pose_embed_en.py  pose_generator.py  pose_imagegen.py  pyproject.toml  serve-5002.cmd  serve-5002.sh  serve-8060.cmd  serve-8060.sh  (+4 more)
.tests/: latest_pytest_output.txt
docs/: API_REFERENCE.md  ASSEMBLY_DSL_SPEC_V0_1.md  ATOMIC_AABB_LIST_LAYOUT_V0_1.md  ATOMIC_BATCH_MODEL_V0_1.md  ATOMIC_CHECKPOINT_CARRIER_SPEC_V0_1.md  ATOMIC_CLEANROOM_ARCHITECTURE_SESSION_2026_04_22.md  ATOMIC_CLEANROOM_BOOTSTRAP_V0_1.md  ATOMIC_CLEANROOM_MODULES_V0_1.md  ATOMIC_DATA_DSL_MVP_V0_1.md  ATOMIC_DATA_DSL_V0_1.md  ATOMIC_DATA_SCOPE_LIFECYCLE_V0_1.md  ATOMIC_DATA_SCOPE_NAMESPACE_V0_1.md  ATOMIC_DECLARATIVE_EVENT_DSL_V0_1.md  ATOMIC_DSL_BATCH_SPEC_V0_1.md  ATOMIC_DSL_RECIPES.md  ATOMIC_EVENT_TO_ASSEMBLY_MAPPING_V0_1.md  ATOMIC_GATEWAY_EMBEDDING_NOTES.md  ATOMIC_GATEWAY_MODEL.md  ATOMIC_GENERATE_ENDPOINT_TABLE_BREAKDOWN_V0_1.md  ATOMIC_OBJECT_MAP_V0_1.md  (+45 more)
(+804 files in other folders)
