[project]
name = "kobold-sandbox"
version = "0.1.0"
description = "Local iterative sandbox for KoboldCpp with git-backed hypothesis branches."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "pydantic>=2.11.0",
  "typer>=0.16.0",
  "uvicorn>=0.35.0",
]

[project.scripts]
kobold-sandbox = "kobold_sandbox.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
  "live: tests that require live external model servers",
]
